--- a/SampleRealmOnWatchOS3/Base.lproj/Main.storyboard
+++ b/SampleRealmOnWatchOS3/Base.lproj/Main.storyboard
@@ -32,6 +32,9 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
+                    <connections>
+                        <outlet property="textField" destination="f9l-gF-Gvd" id="YsQ-Yv-HsY"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
